# tristar

./: .env.example  .gitignore  AUTHENTICATION_FIX.md  FIX_SUMMARY.md  General Info.txt  README.md  deploy_modal.ps1  modal_app.py  next.config.js  package-lock.json  package.json  pyproject.toml  tailwind.config.js
.claude/: .mcp.json  CLAUDE.md  settings.json  settings.local.json
.claude/agents/architect/: AGENT.md
.claude/agents/devops/: AGENT.md
.claude/checkpoints/designer-layer/: impl_manifest.md  pipeline_state.json
.claude/checkpoints/hub-layer/: artifact_digest.md  pipeline_state.json
.claude/checkpoints/partner-triggers-and-rewards/: impl_manifest.md  pipeline_state.json
.claude/commands/: sdlc.md
.claude/memory/: MEMORY.md
.claude/rules/: code-style.md  fastapi-standards.md  react-19-standards.md  security.md  testing.md
.claude/schemas/: clarification_questions.schema.json  design_review.schema.json  design_spec.schema.json  impl_state.schema.json  implementation_manifest.schema.json  problem_spec.schema.json  risk_assessment.schema.json  verification_report.schema.json
data/: inventory.csv
docs/: ARCHITECTURE.md  tristar-presentation.html
docs/specs/: 2026-03-27-sdlc-pipeline-customization-design.md
scripts/: code-review.sh  demo.sh  security-scan.sh
src/backend/: main.py
src/frontend/: .env.local.example  next.config.js  tailwind.config.js  tsconfig.json
tests/e2e/: designer-flow.spec.ts
tests/fixtures/: offer_brief_factory.py  offer_brief_responses.json
tests/unit/: redemption_logic_test.py
tristar-deck/: cover.html  index-v1.html  index.html  make_pdf.py  triStar.html
tristar-deck/assets/: deck.js  style.css
(+162 files in other folders)
